# KotlinEditor

./: App.qml  CMakeLists.txt  LICENSE  Main.qml  README.md  cursorhandler.cpp  cursorhandler.h  filehandler.cpp  filehandler.h  fileioservice.cpp  fileioservice.h  highlighter.cpp  highlighter.h  linker.cpp  linker.h  main.cpp  processhandler.cpp  processhandler.h  resources.qrc  shhandler.cpp  shhandler.h  syntaxHandler.cpp  syntaxHandler.h  theme.cpp  theme.h
assets/: Theme.js  theme.qml
components/: ActionButton.qml  EditorPane.qml  Toolbar.qml
include/: highlighter.h  processhandler.h
src/: cursorhandler.cpp  filehandler.cpp  highlighter.cpp  linker.cpp  main.cpp  processhandler.cpp  syntaxHandler.cpp  theme.cpp
